# pid-engine

./: .gitignore  README.md  pyproject.toml
docs/: concept.md  pid_test_v2_rules.md  schema.md  wip_sample_realdata.md
examples/: basic_example.py
logs/: 2026-05-08.md  2026-05-11.md  2026-05-11b.md  2026-05-12.md  2026-05-13.md  _template.md
output/: generated_v2.lsp  pid_data.lsp  pid_diagn.lsp  pid_pipes.lsp  pid_place.lsp  pid_step1_structures.lsp  pid_step2_machines.lsp  pid_step3_internal.lsp  pid_step4_pipes.lsp  pid_test_v2_lines_1_28_jump_r3.lsp  pid_utils.lsp
rules/: code_hierarchy.json  example.json  pid_test_v2_lines_1_28.json
schema/: sample_01.json  sample_real_01.json
scripts/: validate_json.py
src/pid_engine/: engine.py
src/pid_engine/generator/: __init__.py  lisp_generator.py  pid_v2_generator.py
src/pid_engine/parser/: __init__.py  pid_v2_parser.py  rule_parser.py
src/pid_engine/runtime/: executor.py
tests/: test_generator.py  test_parser.py
